# AndroidChecker

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md
src/: main.rs
src/adb/: client.rs  device.rs  mod.rs
src/audit/: mod.rs
src/backup/: backup_engine.rs  mod.rs  models.rs  restore_engine.rs  root_checker.rs
src/checks/: bootloader.rs  mod.rs  root.rs
src/core/: config.rs  error.rs  mod.rs
src/gui/: mod.rs  monitor.rs
src/gui/monitor/: app.rs  data.rs  mod.rs  state.rs
src/gui_native/: mod.rs  monitor_window.rs
src/monitor/: app.rs  mod.rs  process.rs  resource.rs  service.rs
src/stress/: mod.rs
src/ui/: console.rs  menu.rs  mod.rs
test-android-backup/: original_hashes.txt  test_backup.sh
test-android-backup/backup-verify/: app_list.txt  metadata.json
test-android-backup/backup-verify/sdcard/sdcard/Movies/.thumbnails/: .database_uuid
test-android-backup/backup-verify/sdcard/sdcard/TestBackup/: test.txt
tools/: build-pack.ps1
