[package]
name = "androidchecker"
version = "0.2.0"
edition = "2021"
authors = ["Android ADB Team"]
description = "Android ADB Audit Tool - 安全审计、压力测试、日志采集、备份恢复"
license = "MIT"

[[bin]]
name = "androidchecker"
path = "rust-src/main.rs"

[dependencies]
# 异步运行时
tokio = { version = "1.42", features = ["full"] }

# 终端UI
crossterm = "0.28"
console = "0.15"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 压缩和打包
flate2 = "1.0"
tar = "0.4"

# 系统信息
sysinfo = "0.32"

# 时间处理
chrono = "0.4"

# 并发工具
futures = "0.3"
tokio-util = "0.7"

# 字节处理
bytes = "1.8"

# 终端颜色
colored = "2.1"

# 全局静态变量
lazy_static = "1.5"

# GUI 框架（原生窗口）
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["all_loaders"] }

# Windows API (for UTF-8 console)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
