[package]
name = "androidchecker"
version = "0.2.0"
edition = "2021"
authors = ["Android ADB Team"]
description = "Android ADB Audit Tool - 安全审计、压力测试、日志采集、备份恢复"
license = "MIT"

[[bin]]
name = "androidchecker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
crossterm = "0.28"
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
flate2 = "1.0"
tar = "0.4"
sysinfo = "0.32"
chrono = "0.4"
futures = "0.3"
tokio-util = "0.7"
bytes = "1.8"
colored = "2.1"
lazy_static = "1.5"
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["all_loaders"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
